WIP push subscriptions

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -23,6 +23,9 @@
 </head>
 <body>
     <h1>Offline map example</h1>
+    <div>
+        <button type="button" id="subscribeToPushNotifications" style="display:none">Subscribe to push notifications</button>
+    </div>
     <p>Click a blank area to place a pin. Drag a pin to move it. Click a pin to delete it.</p>
     <div id="map"></div>
 
